--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "mssql": "^9.1.1",
     "mysql": "^2.18.1",
     "mysql2": "^3.2.4",
-    "nodemon": "^2.0.22"
+    "nodemon": "^2.0.22",
+    "pm2": "^5.3.0"
   }
 }
